--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta-validation.version>3.1.0</jakarta-validation.version>
 		<jjwt.version>0.12.6</jjwt.version>
+		<mybatis.version>3.0.4</mybatis.version>
 	</properties>
 
 	<dependencies>
@@ -55,6 +56,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>${mybatis.version}</version>
 		</dependency>
 
 		<dependency>
