--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<jjwt.version>0.12.6</jjwt.version>
 		<mybatis.version>3.0.4</mybatis.version>
 		<liquibase.version>4.30.0</liquibase.version>
+		<springdoc.version>2.2.0</springdoc.version>
 	</properties>
 
 	<dependencies>
@@ -69,6 +70,12 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 			<version>${liquibase.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
