--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta-validation.version>3.1.0</jakarta-validation.version>
 		<jjwt.version>0.12.6</jjwt.version>
-		<mybatis.version>3.0.4</mybatis.version>
 		<liquibase.version>4.30.0</liquibase.version>
 		<springdoc.version>2.2.0</springdoc.version>
+		<preliquibase.version>1.6.0</preliquibase.version>
 	</properties>
 
 	<dependencies>
@@ -61,12 +61,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>${mybatis.version}</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
@@ -75,6 +69,12 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 			<version>${liquibase.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.lbruun.springboot</groupId>
+			<artifactId>preliquibase-spring-boot-starter</artifactId>
+			<version>${preliquibase.version}</version>
 		</dependency>
 
 		<dependency>
