--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<liquibase.version>4.30.0</liquibase.version>
 		<springdoc.version>2.2.0</springdoc.version>
 		<preliquibase.version>1.6.0</preliquibase.version>
+		<minio.version>8.5.14</minio.version>
 	</properties>
 
 	<dependencies>
@@ -140,6 +141,13 @@
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>${minio.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
