--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,10 @@ spring:
     enabled: true
     default-schema: tasklist
 
+  graphql:
+    graphiql:
+      enabled: true
+
 security:
   jwt:
     secret: ${JWT_SECRET}
