--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <minio.version>8.5.14</minio.version>
         <xml-format.version>3.3.1</xml-format.version>
         <checkstyle.version>3.3.1</checkstyle.version>
+        <graphql-java-kickstart.version>16.0.0</graphql-java-kickstart.version>
+        <graphql-java-extended-scalars.version>22.0</graphql-java-extended-scalars.version>
     </properties>
 
     <dependencies>
@@ -65,6 +67,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-java-kickstart</artifactId>
+            <version>${graphql-java-kickstart.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>${graphql-java-extended-scalars.version}</version>
         </dependency>
 
         <dependency>
